@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-13T08:22:34Z",
+  "timestamp" : "2022-05-14T01:54:21Z",
   "count_outdated" : 1826,
   "uniques_outdated" : 364,
-  "count" : 2105,
+  "count" : 2106,
   "uniques" : 400,
   "clones" : [
     {
@@ -91,8 +91,8 @@
     },
     {
       "timestamp": "2022-05-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
