@@ -1,5 +1,5 @@
 {
-  "count": 279,
+  "count": 280,
   "uniques": 20,
   "clones": [
     {
@@ -64,7 +64,7 @@
     },
     {
       "timestamp": "2022-05-13T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
